SONARJAVA-6967: Fix review findings for rule S9396
- Extend nodesToVisit to CLASS_KINDS (covers enums, records, interfaces, annotations)
- Remove unsafe cast to Symbol.VariableSymbol, use Symbol instead
- Fix visited class deduplication using TypeSymbol identity instead of name strings
- Expand test sample with deep nesting, anonymous classes, enums, static fields,
  serialVersionUID, and precise issue location markers

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>